<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stats_select_plants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/button_min_height_compact"
        android:text="@string/select_plants"
        android:textAllCaps="false"
        style="?attr/materialButtonOutlinedStyle" />

    <de.oabidi.pflanzenbestandundlichttest.core.ui.BarChartView
        android:id="@+id/stats_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/stats_chart_default_content_description" />

    <TextView
        android:id="@+id/stats_placeholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/spacing_large"
        android:text="@string/stats_placeholder"
        android:visibility="gone" />

    <TextView
        android:id="@+id/stats_dli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/spacing_large"
        android:text="@string/dli_placeholder" />

    <TextView
        android:id="@+id/stats_diary_counts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/spacing_large"
        android:text="@string/stats_no_diary_entries" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stats_view_measurements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/action_view_measurements"
        android:textAllCaps="false"
        style="?attr/materialButtonFilledStyle" />

</LinearLayout>
