...
        android:title="@string/title_plants" />
    <item
        android:id="@+id/nav_species_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_species_search" />
    <item
        android:id="@+id/nav_measure"
        android:icon="@drawable/ic_light"
        android:title="@string/title_measure" />
    <item
        android:id="@+id/nav_diary"
        android:icon="@drawable/ic_book"
        android:title="@string/title_diary" />
    <item
        android:id="@+id/nav_reminders"
        android:icon="@drawable/ic_alarm"
        android:title="@string/title_reminders" />
    <item
        android:id="@+id/nav_stats"
        android:icon="@drawable/ic_insights"
        android:title="@string/title_stats" />
</menu>

