...
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_plant_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
...
            android:layout_height="wrap_content"
            android:text="@string/action_capture_photo"
            android:textAllCaps="false"
            style="?attr/materialButtonOutlinedStyle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_save_plant"
            android:textAllCaps="false"
            style="?attr/materialButtonFilledStyle" />

...
