<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lux_raw_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:text="@string/lux_raw_placeholder"
        app:layout_constraintEnd_toStartOf="@id/camera_luma_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lux_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/lux_placeholder"
        app:layout_constraintEnd_toStartOf="@id/camera_luma_value"
        app:layout_constraintStart_toStartOf="@id/lux_raw_value"
        app:layout_constraintTop_toBottomOf="@id/lux_raw_value" />

    <TextView
        android:id="@+id/ppfd_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/ppfd_placeholder"
        app:layout_constraintEnd_toStartOf="@id/camera_luma_value"
        app:layout_constraintStart_toStartOf="@id/lux_value"
        app:layout_constraintTop_toBottomOf="@id/lux_value" />

    <TextView
        android:id="@+id/dli_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/dli_placeholder"
        app:layout_constraintStart_toStartOf="@id/ppfd_value"
        app:layout_constraintTop_toBottomOf="@id/ppfd_value" />

    <TextView
        android:id="@+id/artificial_photon_hours_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/artificial_photon_hours_placeholder"
        app:layout_constraintEnd_toStartOf="@id/camera_luma_value"
        app:layout_constraintStart_toStartOf="@id/dli_value"
        app:layout_constraintTop_toBottomOf="@id/dli_value" />

    <TextView
        android:id="@+id/artificial_ambient_dli_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/artificial_ambient_dli_placeholder"
        app:layout_constraintEnd_toStartOf="@id/camera_luma_value"
        app:layout_constraintStart_toStartOf="@id/artificial_photon_hours_value"
        app:layout_constraintTop_toBottomOf="@id/artificial_photon_hours_value" />

    <TextView
        android:id="@+id/artificial_camera_dli_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/artificial_camera_dli_placeholder"
        app:layout_constraintEnd_toStartOf="@id/camera_luma_value"
        app:layout_constraintStart_toStartOf="@id/artificial_ambient_dli_value"
        app:layout_constraintTop_toBottomOf="@id/artificial_ambient_dli_value" />

    <TextView
        android:id="@+id/camera_luma_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:text="@string/camera_luma_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/camera_ppfd_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_large"
        android:text="@string/camera_ppfd_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_luma_value" />

    <TextView
        android:id="@+id/camera_dli_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_large"
        android:text="@string/camera_dli_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_ppfd_value" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/light_projection_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="camera_dli_value,artificial_camera_dli_value" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/light_projection_barrier">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/plant_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:minHeight="@dimen/form_field_min_height"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plant_selector">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/stage_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:minHeight="@dimen/form_field_min_height"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/measurement_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_small"
        android:enabled="false"
        android:text="@string/measurement_save"
        android:textAllCaps="false"
        style="?attr/materialButtonFilledStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stage_selector" />

    <TextView
        android:id="@+id/location_check_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/location_check_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/measurement_save_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/measurement_calibrate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/menu_calibrate"
        android:textAllCaps="false"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_check_value" />

</androidx.constraintlayout.widget.ConstraintLayout>
